--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,10 +8,12 @@
 <hr>
 <form method="post" action="users">
     <b style="font-size: large">Meals of&nbsp;</b>
-    <select name="userId">
-        <option value="1">User</option>
-        <option value="2">Admin</option>
-    </select>
+    <label>
+        <select name="userId">
+            <option value="1">User</option>
+            <option value="2">Admin</option>
+        </select>
+    </label>
     <button type="submit">Select</button>
 </form>
 </body>
