--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,6 +12,8 @@
         <select name="userId">
             <option value="1">User</option>
             <option value="2">Admin</option>
+            <option value="100000">User</option>
+            <option value="100001">Admin</option>
         </select>
     </label>
     <button type="submit">Select</button>
